--- a/src/podiobooks/media/js/pbwidgets/book_desc/BookDesc.html
+++ b/src/podiobooks/media/js/pbwidgets/book_desc/BookDesc.html
@@ -1,3 +1,3 @@
-<span class="book" dojoAttachEvent="onmouseenter:_showDescription, onmouseleave:_hideTip">
+<span class="title-hover" dojoAttachEvent="onmouseenter:_showDescription, onmouseleave:_hideTip">
 	<span dojoAttachPoint="containerNode"></span>
 </span>
